removed overflow:hidden, as it doesn't seem to be needed for the horizontall scrollbar issue referenced in #473 and #204.

--- a/wdn/templates_3.0/css/ie.css
+++ b/wdn/templates_3.0/css/ie.css
@@ -3,7 +3,7 @@
 }
 
 #wdn_wrapper  {
-	overflow:hidden;
+	/*overflow:hidden;*/
 	border-top:12px solid #e0e0e0;
 }
 #header {
